cfn_benchmark/cfn_templates_greenfield/hassanhashmy__cloudformation/Master-Kafka/Master-Kafka.yaml
# Template created by hash
Description: Kafka Application Stack (incl. Security Groups, IAM Roles, and 3 EC2 instances)

# This Master Template creates the following resources:
#   VPC and Private Subnets (one per AZ)
#   IAM Managed Policy for EC2 Instances
#   EC2 Instance Security Group
#   EC2 IAM Role and Instance Profile
#   3 x EC2 Instance, one in each AZ

Parameters:

  # VPC Configuration Parameters
  VpcCidrBlock:
    Description: CIDR block for the new VPC
    Type: String
    Default: 10.0.0.0/16

  PrivateSubnetACidrBlock:
    Description: CIDR block for the private subnet in AZ-A
    Type: String
    Default: 10.0.1.0/24

  PrivateSubnetBCidrBlock:
    Description: CIDR block for the private subnet in AZ-B
    Type: String
    Default: 10.0.2.0/24

  PrivateSubnetCCidrBlock:
    Description: CIDR block for the private subnet in AZ-C
    Type: String
    Default: 10.0.3.0/24

  ImageId:
    Description: The Amazon Machine Image Id
    Type: String
    Default: ami-XXXXXXXX # SomeDCHash2BaseImage

  EC2KeyPair:
    Description: The EC2 Keypair to associated to the EC2 Instances (Leave blank for no key pair)
    Type: String
    Default: DCHash2-TestKey

  InstanceType:
    Description: The EC2 instance type to launch
    Type: String
    AllowedValues:
    - c4.2xlarge
    - c4.4xlarge
    - c4.8xlarge
    - c4.large
    - c4.xlarge
    - m4.10xlarge
    - m4.16xlarge
    - m4.2xlarge
    - m4.4xlarge
    - m4.large
    - m4.xlarge
    - r4.16xlarge
    - r4.2xlarge
    - r4.4xlarge
    - r4.8xlarge
    - r4.large
    - r4.xlarge
    - t2.2xlarge
    - t2.large
    - t2.medium
    - t2.micro
    - t2.nano
    - t2.small
    - t2.xlarge
    Default: t2.micro

  Environment:
    Description: Production or UAT or Test
    Type: String
    Default: UAT
    AllowedValues:
      - Production
      - UAT
      - Test

  BusinessUnit:
    Description: Some Group Business Unit
    Type: String
    Default: Gaming
    AllowedValues:
      - Charitable
      - Corporate
      - Gaming
      - Lotteries
      - Wagering
    ConstraintDescription: Must be Charitable | Corporate | Gaming | Lotteries | Wagering

  Department:
    Description: Department
    Type: String
    MinLength: '3'
    MaxLength: '255'
    Default: BrandName

  Application:
    Description: Application
    Type: String
    MinLength: '3'
    MaxLength: '255'
    Default: SomePlatform

  Component:
    Description: Specific Application
    Type: String
    MinLength: '3'
    MaxLength: '255'
    Default: Kafka

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:

    - Label:
        default: VPC Configuration
      Parameters:
      - VpcCidrBlock
      - PrivateSubnetACidrBlock
      - PrivateSubnetBCidrBlock
      - PrivateSubnetCCidrBlock
    - Label:
        default: EC2 Instance Configuration
      Parameters:
      - ImageId
      - EC2KeyPair
      - InstanceType
    - Label:
        default: Tagging Parameters
      Parameters:
      - Environment
      - BusinessUnit
      - Department
      - Application
      - Component

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-VPC
        - Key: Environment
          Value: !Ref Environment
        - Key: BusinessUnit
          Value: !Ref BusinessUnit
        - Key: Department
          Value: !Ref Department
        - Key: Application
          Value: !Ref Application
        - Key: Component
          Value: !Ref Component

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnetACidrBlock
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateSubnetA

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnetBCidrBlock
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateSubnetB

  PrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnetCCidrBlock
      AvailabilityZone: !Select [2, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-PrivateSubnetC

  IAMManagedPolicyEC2Instances:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      Description: Managed policy for EC2 instances in the Kafka application stack
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - cloudwatch:PutMetricData
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:PutLogEvents
              - logs:DescribeLogStreams
            Resource: "*"

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the Kafka EC2 instances
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 9092
          ToPort: 9092
          CidrIp: !Ref VpcCidrBlock
        - IpProtocol: tcp
          FromPort: 2181
          ToPort: 2181
          CidrIp: !Ref VpcCidrBlock
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-SecurityGroup
        - Key: Environment
          Value: !Ref Environment
        - Key: BusinessUnit
          Value: !Ref BusinessUnit
        - Key: Department
          Value: !Ref Department
        - Key: Application
          Value: !Ref Application
        - Key: Component
          Value: !Ref Component

  IAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - !Ref IAMManagedPolicyEC2Instances
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-IAMRole
        - Key: Environment
          Value: !Ref Environment
        - Key: BusinessUnit
          Value: !Ref BusinessUnit
        - Key: Department
          Value: !Ref Department
        - Key: Application
          Value: !Ref Application
        - Key: Component
          Value: !Ref Component

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref IAMRole

  EC2InstanceA:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref EC2KeyPair
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PrivateSubnetA
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Component}-A
        - Key: Environment
          Value: !Ref Environment
        - Key: BusinessUnit
          Value: !Ref BusinessUnit
        - Key: Department
          Value: !Ref Department
        - Key: Application
          Value: !Ref Application
        - Key: Component
          Value: !Sub ${Component}-A

  EC2InstanceB:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref EC2KeyPair
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PrivateSubnetB
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Component}-B
        - Key: Environment
          Value: !Ref Environment
        - Key: BusinessUnit
          Value: !Ref BusinessUnit
        - Key: Department
          Value: !Ref Department
        - Key: Application
          Value: !Ref Application
        - Key: Component
          Value: !Sub ${Component}-B

  EC2InstanceC:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref EC2KeyPair
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref PrivateSubnetC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-${Component}-C
        - Key: Environment
          Value: !Ref Environment
        - Key: BusinessUnit
          Value: !Ref BusinessUnit
        - Key: Department
          Value: !Ref Department
        - Key: Application
          Value: !Ref Application
        - Key: Component
          Value: !Sub ${Component}-C

Outputs:
  SecurityGroup:
    Description: The Kafka Security Group
    Value: !Ref SecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-SecurityGroup"

  InstanceProfileName:
    Value: !Ref InstanceProfile
    Export:
      Name: !Sub "${AWS::StackName}-InstanceProfileName"
  InstanceProfileARN:
    Value: !GetAtt InstanceProfile.Arn
    Export:
      Name: !Sub "${AWS::StackName}-InstanceProfileARN"

  InstanceA:
    Description: Instance ID for Instance AZ-A
    Value: !Ref EC2InstanceA
    Export:
      Name: !Sub ${AWS::StackName}-InstanceA

  InstanceB:
    Description: Instance ID for Instance AZ-B
    Value: !Ref EC2InstanceB
    Export:
      Name: !Sub ${AWS::StackName}-InstanceB

  InstanceC:
    Description: Instance ID for Instance AZ-C
    Value: !Ref EC2InstanceC
